# sam-python-with-layers

./: .gitignore  README.md  samconfig.toml  template.yaml
dependencies/python/: __init__.py  demo.py  pyproject.toml  requirements.txt
dependencies/python/layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hello_world/: app.py
