[tool.poetry]
name = "layer"
version = "0.1.0"
description = "Demonstrates creating an AWS Serverless Lambda Layer in Poetry"
authors = ["John Lockwood <JohnLockwood2999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
poetry = "^1.0.3"
ipython = "^7.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"



